fix: layout breaks in UpgradesPage and EventPages

--- a/src/client/components/Headline/Headline.module.css
+++ b/src/client/components/Headline/Headline.module.css
@@ -1,11 +1,17 @@
 .headline {
   margin: 0.66em 0px;
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: 700;
   font-family: var(--title);
   text-align: center;
+  max-width: 100%;
+  overflow-wrap: break-word;
 
   &:first-child {
     margin-top: 0px;
+  }
+
+  @media (--mq-small) {
+    font-size: 2.5em;
   }
 }
