--- a/src/client/components/Text/SpoileredText.module.css
+++ b/src/client/components/Text/SpoileredText.module.css
@@ -1,8 +1,3 @@
-.hidden,
-.prerendered {
-  white-space: nowrap;
-}
-
 .hidden {
   cursor: pointer;
 }
@@ -18,8 +13,9 @@
     background: transparent !important;
   }
 
+  /** BUG: this moves from right to somewhere in left column instead of disappearing on hover **/
+  /** FIXME: find better solution for this
   &:after {
-    /** BUG: this moves from right to somewhere in left column instead of disappearing on hover **/
     content: "***";
     position: absolute;
     left: 50%;
@@ -29,6 +25,7 @@
     overflow: hidden;
     color: var(--primary);
   }
+  **/
 }
 
 .prerendered:not(:focus) {
