--- a/src/pages/UpgradesPage/components/FiltersForm.module.css
+++ b/src/pages/UpgradesPage/components/FiltersForm.module.css
@@ -29,6 +29,10 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+
+    &.wrap {
+      flex-flow: row wrap;
+    }
   }
 
   & button.classSel {
